Add Header and main layouts

--- a/index.html
+++ b/index.html
@@ -25,11 +25,42 @@
                 <li><span class="mdi mdi-shield-check"></span>Privacy</li>
             </ul>
         </div>
-        <div class="header">header</div>
+        <div class="header">
+            <div class="header-search-bar">
+                <div class="header-search-bar-container">
+                    <span class="mdi mdi-magnify"></span>
+                    <input type="text" class="search-bar">
+                </div>
+            </div>
+            <div class="profile-right-corner">
+                <div class="profile-right-corner-container">
+                    <span class="mdi mdi-bell-ring-outline"></span>
+                    <img class="profile-img" src="odin.webp" alt="">
+                    <span><p>Odin</p></span>
+                </div>
+            </div>
+            <div class="profile-name-greet">
+                <div class="profile-name-greet-container">
+                    <img class="profile-img-greet" src="odin.webp" alt="">
+                    <span class="profile-name-greeting-text">
+                        <p class="hi">Hi there, </p> 
+                        <p>Odin (@odin)</p>
+                    </span>
+                </div>
+            </div>
+            <div class="profile-quick-buttons">
+                <div class="profile-quick-buttons-container">
+                    <button class="quick-buttons">New</button>
+                    <button class="quick-buttons">Upload</button>
+                    <button class="quick-buttons">Share</button>
+                </div>
+            </div>
+        </div>
         <div class="main-content">
             <div class="heading-main-content">
                 <h2>Your Projects</h2>
             </div>
+            <div></div>
         <div class="card">
             <div class="card-heading"><span>Super Cool Project</span></div>
             <div class="card-text">
