Working on main content

--- a/index.html
+++ b/index.html
@@ -57,10 +57,12 @@
             </div>
         </div>
         <div class="main-content">
+            <!--
             <div class="heading-main-content">
                 <h2>Your Projects</h2>
             </div>
             <div></div>
+        -->
         <div class="card">
             <div class="card-heading"><span>Super Cool Project</span></div>
             <div class="card-text">
@@ -127,7 +129,64 @@
                 <span class="mdi mdi-share-variant"></span>
             </div>
         </div></div>
-        <div class="information">info</div>
+        <div class="information">
+           <!-- <div class="heading-announcements">
+                <h3>Announcements</h3>
+            </div>
+        -->
+            <div class="content-announcements">
+                <div class="content-item">
+                    <div class="content-item-heading"><p>Site Maintenance</p></div>
+                    <div class="content-item-body">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam officia saepe, laborum voluptates nobis at.</p>
+                    </div>
+                </div>
+                <div class="content-item">
+                    <div class="content-item-heading"><p>Community Share Day</p></div>
+                    <div class="content-item-body">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam officia saepe, laborum voluptates nobis at. Lorem ipsum dolor sit.</p>
+                    </div>
+                </div>
+                <div class="content-item">
+                    <div class="content-item-heading"><p>Update Privacy Policy</p></div>
+                    <div class="content-item-body">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Lorem, ipsum. Lorem, ipsum dolor.</p>
+                    </div>
+                </div>
+            </div>
+
+            <!--<div class="heading-trending">
+                <h4>Trending</h4>
+            </div>-->
+            <div class="content-trending">
+                <div class="trending-item">
+                    <img class="trending-img" src="thor.jpg" alt="">
+                    <div class="trending-item-body">
+                        <p>@thor</p> 
+                        <p>Super Cool Project</p>
+                    </div>
+
+                </div>
+                <div class="trending-item">
+                    <img class="trending-img" src="odin.webp" alt="">
+                    <div class="trending-item-body">
+                        <p>@loki</p>
+                        <p>Super Cool Project</p></div>
+                </div>
+                <div class="trending-item">
+                    <img class="trending-img" src="loki.avif" alt="">
+                    <div class="trending-item-body">
+                        <p>@odin</p>
+                        <p>Super Cool Project</p></div>
+                </div>
+                <div class="trending-item">
+                    <img class="trending-img" src="freya.avif" alt="">
+                    <div class="trending-item-body">
+                        <p>@freya</p>
+                        <p>Super Cool Project</p></div>
+                </div>
+            </div>
+        </div>
     </div>
     
 </body>
