Work on responsivenes

--- a/index.html
+++ b/index.html
@@ -17,17 +17,19 @@
                 <span class="mdi mdi-menu-open open-icon close-icon"></span>
 
             </div>
-            <ul class="collapse">
-                <li><span class="mdi mdi-home-account"></span>Home</li>
-                <li><span class="mdi mdi-card-account-details"></span>Profile</li>
-                <li><span class="mdi mdi-message-text-fast"></span>Messages</li>
-                <li><span class="mdi mdi-history"></span>History</li>
-                <li><span class="mdi mdi-file-tree"></span>Tasks</li>
-                <li><span class="mdi mdi-account-group"></span>Communities</li>
-                <li><span class="mdi mdi-cog"></span>Settings</li>
-                <li><span class="mdi mdi-face-agent"></span>Support</li>
-                <li><span class="mdi mdi-shield-check"></span>Privacy</li>
-            </ul>
+            <nav class="collapse">
+                <ul class="" >
+                    <li><span class="mdi mdi-home-account"></span>Home</li>
+                    <li><span class="mdi mdi-card-account-details"></span>Profile</li>
+                    <li><span class="mdi mdi-message-text-fast"></span>Messages</li>
+                    <li><span class="mdi mdi-history"></span>History</li>
+                    <li><span class="mdi mdi-file-tree"></span>Tasks</li>
+                    <li><span class="mdi mdi-account-group"></span>Communities</li>
+                    <li><span class="mdi mdi-cog"></span>Settings</li>
+                    <li><span class="mdi mdi-face-agent"></span>Support</li>
+                    <li><span class="mdi mdi-shield-check"></span>Privacy</li>
+                </ul>
+            </nav>
         </div>
         <div class="header">
             <div class="header-search-bar">
